# bunching-finite-difference

./: .gitignore  README.md  equations.py  make_movies.sh  pyproject.toml
.manuscript/: REPRODUCING.md  manuscript_runs.p1.yaml.j2  manuscript_runs.p2.yaml.j2  manuscript_runs.p3.yaml.j2  manuscript_runs.yaml.j2  parallel_convert.sh  profile_tool.py
analysis/: __main__.py  analyze.py  curvature_plot.py  variogram.py
bunching_finite_diff/: __main__.py  equations.py  equations_jax.py  equations_numba_old.py  serial.py  sharded.py  sharded_solver.py
libs/: checkpoints.py  data3d.py  plotter.py  rhs.py
other/: npz_to_xyz_fast.py  npz_to_xyz_inverted.py
simulation_launcher/: launcher.py
simulation_launcher/example/: example_config.plan.yaml
tests/: test_rhs.py
utils/: orb2ch.py  read_checkpoint.py
viz2d/: __init__.py  __main__.py  viz2d.py
viz3d/: __main__.py  viz3d.py
