[project]
name = "bunching-finite-diff"
version = "0.1.0"
description = ""
authors = [{ name = "Vasil Ivanov", email = "ivanovvasil99@gmail.com" }]
requires-python = "~=3.12.0"
readme = "README.md"
dependencies = [
    "scipy>=1.16.0,<2",
    "numpy>=2.0.0,<2.3.0",
    "numba>=0.61.2,<0.62",
    "matplotlib>=3.10.3,<4",
    "typed-argument-parser>=1.10.1,<2",
    "jax[cpu]>=0.8.0,<0.9",
    "optimistix>=0.0.11,<0.0.12",
    "lineax>=0.0.8,<0.0.9",
    "scikit-learn>=1.7.1,<2",
    "orbax>=0.1.9,<0.2",
    "rich>=14.2.0,<15",
]

[dependency-groups]
cuda13 = ["jax[cuda13]>=0.8.0,<0.9"]
cuda12 = ["jax[cuda12]>=0.8.0,<0.9"]
tpu = ["jax[tpu]>=0.8.0,<0.9"]

[tool.uv]
default-groups = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
